<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FeedbackActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="30dp"
    android:background="#FFFFFF"
    >

    <ImageView
        android:id="@+id/backF"
        android:layout_width="78dp"
        android:layout_height="59dp"
        app:srcCompat="@drawable/back2"
        android:layout_marginTop="-60dp"
        android:layout_marginStart="-160dp"
        />

    <ImageView
        android:id="@+id/imgF"
        android:layout_width="109dp"
        android:layout_height="83dp"
        android:layout_marginStart="-10dp"
        android:layout_marginTop="-10dp"
        app:srcCompat="@drawable/feed" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/armata"
        android:textStyle="bold"
        android:textSize="24dp"
        android:text="@string/rate"
        android:id="@+id/tv_rate"
        android:layout_margin="24dp"
        android:textAlignment="center"
        />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:progressDrawable="@color/feedback"
        android:thumb="@drawable/thumb"
        android:id="@+id/seekBarFeedback"
        android:progress="0"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/armata"
        android:textStyle="bold"
        android:textSize="24dp"
        android:text="@string/value"
        android:id="@+id/tv_valueFeedback"
        android:layout_margin="24dp"
        android:textAlignment="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/armata"
        android:textStyle="bold"
        android:textSize="24dp"
        android:text="@string/want"
        android:id="@+id/tv_tell"
        android:layout_margin="24dp"
        android:textAlignment="center"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_text_feedback"
        android:textColor="#000"
        android:layout_centerInParent="true"
        />

    <Button
        android:id="@+id/submit_feedback"
        android:layout_width="wrap_content"
        android:layout_height="56dp"

        android:layout_marginTop="60dp"
        android:background="@drawable/circlebutton"
        android:fontFamily="@font/armata"
        android:text="Submit"
        android:textColor="@color/caram"

        android:textSize="18dp"
        android:textStyle="bold"

        />



</LinearLayout>